[package]
name = "aligned-bytes"
version = "0.1.4-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "A continuous fixed-length byte array with a specified alignment."
license = "MIT"
repository = "https://github.com/Nugine/aligned-bytes"
keywords = ["no-std", "alloc", "align"]
categories = ["data-structures", "embedded", "no-std"]
readme = "README.md"

[features]
std = []
default = ["std"]
unstable = []
