[package]
name = "aligned-utils"
version = "1.0.2-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "Common utilities to work with aligned values and allocation"
license = "MIT"
repository = "https://github.com/datenlord/aligned-utils"
keywords = ["no-std", "alloc", "align"]
categories = ["data-structures", "embedded", "no-std"]
readme = "README.md"

[features]
alloc = []
std = ["alloc"]
default = ["std"]
